k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planner-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: planner-ui
  template:
    metadata:
      labels:
        app: planner-ui
    spec:
      containers:
        - name: planner-ui
          image: planner-ui:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: planner-ui
spec:
  selector:
    app: planner-ui
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer
