k8s/pushgateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pushgateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pushgateway
  template:
    metadata:
      labels:
        app: pushgateway
    spec:
      containers:
      - name: pushgateway
        image: prom/pushgateway:v1.8.0
        ports:
        - containerPort: 9091

---
apiVersion: v1
kind: Service
metadata:
  name: pushgateway
spec:
  selector:
    app: pushgateway
  ports:
  - name: http
    port: 9091
    targetPort: 9091
